Side bar Feature Test 1

--- a/Asset/css/Unified_Style.css
+++ b/Asset/css/Unified_Style.css
@@ -1,3 +1,11 @@
+.side_bar{
+  float:left;
+  padding:10px;
+  border:none;
+  width:15%;
+  position:fixed;
+}
+
 details{
   padding: 4px;
   background-color: #FFFFFF;
