--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -5,7 +5,8 @@
 
   <body>
     {% include page-header.html %}
-
+    
+    {% include sidebar.html %}
     <section class="main-content">
       
       {{ content }}
