--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,7 @@
 <section class="sidebar">
-    test
+    <ul>
+    {% for tag in site.tags %}
+        <li>{{ tag[0] }} [{{tag[1] | size}}]</li>
+    {% endfor %}
+    </ul>
 </section>
