Sidebar Auto Hide

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,6 +2,10 @@
     background-color: white;
     position: absolute;
     left: 0px;
+    top: 16px;
     max-width: 20%;
     color: #606c71;
+}
+@media screen and (max-width: 320px){
+    .sidebar{display: none};
 }
