--- a/Asset/css/Unified_Style.css
+++ b/Asset/css/Unified_Style.css
@@ -55,12 +55,22 @@ button:hover{
 
 /* Add some padding inside the card container */
 .container {
-  padding: 2px 16px 20px;
+  padding: 2px 16px 20px 25px;
   font-size: 80%;
 }
 
 .title_container{
-  padding: 2px 16px;
+  padding: 2px 16px 2px 25px;
+}
+
+.new_decorate{
+  padding: none;
+  background-color: #fafaa8;
+  font-size: 15px;
+  width: 13px;
+  left:0px;
+  top: 0px;
+  border-radius: 5px 0 0 5px;
 }
 
 .last_card {
