--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,11 @@
 .sidebar{
     background-color: white;
-    position: absolute;
+    position: relative;
     left: 0px;
+    top: 20px;
     max-width: 20%;
     color: #606c71;
 }
-@media screen and (max-width: 1400px){
+@media screen and (max-width: 800px){
     .sidebar{display: none};
 }
