--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,10 @@
 .sidebar{
     background-color: white;
-    position: relative;
     left: 0px;
     top: 20px;
     max-width: 20%;
     color: #606c71;
+    float: left;
 }
 @media screen and (max-width: 800px){
     .sidebar{display: none};
