--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,9 @@
 .sidebar{
     background-color: white;
-    left: 0px;
-    top: 20px;
+    position: absolute;
+    left: 20px;
     max-width: 20%;
     color: #606c71;
-    float: left;
 }
 @media screen and (max-width: 800px){
     .sidebar{display: none};
