--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
+  <h1 class="project-name">Mark's Blog</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="https://github.com/MarkChenYutian/Markchen_Blog" class="btn">View on GitHub</a>
   <a href="https://markchenyutian.github.io/Markchen_Blog/" class="btn">Back to Homepage</a>
