--- a/css/main_.css
+++ b/css/main_.css
@@ -145,9 +145,9 @@ a:hover { text-decoration: underline; }
 @media screen and (max-width: 42em) { .page-header { padding: 2rem 1rem; } }
 
 .project-name { margin-top: 0; margin-bottom: 0.1rem; }
-@media screen and (min-width: 64em) { .project-name { font-size: 3.25rem; } }
-@media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2.25rem; } }
-@media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; } }
+@media screen and (min-width: 64em) { .project-name { font-size: 3.25rem; font-weight:100;} }
+@media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2.25rem; font-weight:100;} }
+@media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; font-weight:100;} }
 
 .project-tagline { margin-bottom: 2rem; font-weight: normal; opacity: 0.7; }
 @media screen and (min-width: 64em) { .project-tagline { font-size: 1.25rem; } }
