--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,9 +1,10 @@
 .sidebar{
     background-color: white;
     position: absolute;
-    left: 20px;
+    left: 0px;
     max-width: 20%;
     color: #606c71;
+    padding-left: 20px;
 }
 @media screen and (max-width: 800px){
     .sidebar{display: none};
