--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,7 +5,8 @@
     left: 0px;
     max-width: fit-content;
     color: #606c71;
-    padding-left: 20px;
+    padding-left: 30px;
+    padding-right: 10px;
     box-shadow: 3px 3px 5px #b3b3b3;
     float: left;
     border-radius: 0 10px 10px 0;
