--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -3,4 +3,5 @@
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="https://github.com/MarkChenYutian/Markchen_Blog" class="btn">View on GitHub</a>
   <a href="https://markchenyutian.github.io/Markchen_Blog/" class="btn">Back to Homepage</a>
+  <a href="https://markchenyutian.github.io/Markchen_Blog/2020/10/04/Index.html" class="btn">All Posts</a>
 </section>
