--- a/Asset/css/Unified_Style.css
+++ b/Asset/css/Unified_Style.css
@@ -52,16 +52,19 @@ button:hover{
 /* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  text-decoration: none;
 }
 
 /* Add some padding inside the card container */
 .container {
   padding: 2px 16px 20px 16px;
   font-size: 80%;
+  text-decoration: none;
 }
 
 .title_container{
   padding: 2px 16px 2px 16px;
+  text-decoration: none;
 }
 
 .content_block{
@@ -71,6 +74,7 @@ button:hover{
   border-radius: 10px;
   cursor: default;
   transition: 0.3s;
+  text-decoration: none;
 }
 .content_block:hover{
   background-color: #f5f9fd;
