Test CSS Update

--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -6,7 +6,9 @@
   <body>
     {% include page-header.html %}
     
-    {% include sidebar.html %}
+    <sidebar>
+      test
+    </sidebar>
     <section class="main-content">
       
       {{ content }}
