--- a/css/main_.css
+++ b/css/main_.css
@@ -126,10 +126,35 @@
 
 * { box-sizing: border-box; }
 
-body { padding: 0; margin: 0; font-family: "Arial", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; color: #606c71; }
+body { padding: 0; margin: 0; font-family: "Arial", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; color: #606c71; display:flex}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body > *:not(main) {
+  min-width: 20vw;
+}
+
+body > main-content{
+  flex: 1;
+  margin: 1vh 0;
+}
+
+sidebar .content {
+  background-color: #f36;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
+  display: flex;
+  /*justify-content: center;*/
+  align-items: center;
+}
 
 a { color: #1e6bb8; text-decoration: none; }
-a:hover { text-decoration: underline; }
+a:hover { text-decoration: none; }
 
 .btn { display: inline-block; margin-bottom: 1rem; color: rgba(88, 88, 88, 0.7); background-color: rgba(255, 255, 255, 0.08); border-color: rgba(150, 150, 150, 0.2); border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; transition: 0.3s}
 .btn:hover { color: rgba(88, 88, 88, 0.8); text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.3); box-shadow: inset 3px 2px  #bbbbbb; transition:0.3s;}
