--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -3,11 +3,13 @@
   
   {% include head.html %}
 
+  
+  {% include page-header.html %}
   <body>
-    {% include page-header.html %}
-    
     <sidebar>
-      test
+      <content>
+        Test Nvigation Panel
+      </content>
     </sidebar>
     <section class="main-content">
       
