--- a/css/main_.css
+++ b/css/main_.css
@@ -144,7 +144,7 @@ body > main-content{
 }
 
 sidebar .content {
-  background-color: #f36;
+  background-color: #e9e9e9;
   width: 100%;
   height: 100%;
   border-radius: 3px;
