--- a/css/Version1.css
+++ b/css/Version1.css
@@ -143,7 +143,7 @@ body > main-content{
   margin: 1vh 0;
 }
 
-sidebar .content {
+content {
   background-color: #e9e9e9;
   width: 100%;
   height: 100%;
