--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -5,7 +5,8 @@
 
   
   {% include page-header.html %}
-  <body>
+
+  <body_content>
     <sidebar>
       <content>
         Test Nvigation Panel
@@ -18,6 +19,5 @@
       {% include page-footer.html %}
 
     </section>
-
-  </body>
+  </body_content>
 </html>
