--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -16,8 +16,10 @@
       
       {{ content }}
 
-      {% include page-footer.html %}
-
     </section>
   </body_content>
+  
+  <section class="main-content">
+    {% include page-footer.html %}
+  </section>
 </html>
