Update Nav Panel

--- a/_layouts/mainPage.html
+++ b/_layouts/mainPage.html
@@ -9,7 +9,7 @@
   <body_content>
     <sidebar>
       <content>
-        Test Nvigation Panel
+        {% include sidebar.html %}
       </content>
     </sidebar>
     <section class="main-content">
@@ -18,7 +18,7 @@
 
     </section>
   </body_content>
-  
+
   <section class="main-content">
     {% include page-footer.html %}
   </section>
