--- a/css/Version4.css
+++ b/css/Version4.css
@@ -144,18 +144,15 @@ body_content > main-content{
 }
 
 content {
-  background-color: #f5f5f5;
+  background-color: #e9e9e9;
   width: 100%;
   height: 100%;
-  border-radius: 3px;
   display: flex;
-  /*justify-content: center;*/
-  align-items: top;
+  align-items: flex-start;
+  padding: 20px;
 }
 
-.main-content{
-  box-shadow: inset 5px 10px #666666;
-}
+
 
 a { color: #1e6bb8; text-decoration: none; }
 a:hover { text-decoration: none; }
