--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,11 @@
 <section class="sidebar">
-    <h4 style="font-weight: normal; color: #159957;">All Posts</h4>
+    <h4 style="font-weight: normal; color: #159957; font-size:120%;">All Posts</h4>
         {% for tag in site.tags %}
             {{ tag[0] }} [{{tag[1] | size}}]
             <br>
         {% endfor %}
     <br>
-    <h4 style="font-weight: normal; color: #159957;">Link to Other Websites</h4>
+    <h4 style="font-weight: normal; color: #159957; font-size:120%;">Link to Other Websites</h4>
     <a href="https://markchenyutian.github.io/GZFLS_Math_Club/">Math Club @ CHGZFLS</a>
 
 </section>
