--- a/css/Version4.css
+++ b/css/Version4.css
@@ -145,7 +145,7 @@ body_content > main-content{
 
 content {
   background-color: #e9e9e9;
-  width: 100%;
+  width: fit-content;
   height: 100%;
   display: flex;
   align-items: flex-start;
