--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,7 @@
 <section class="sidebar">
+    <h4 style="font-weight: normal; color: #159957; font-size:120%;">About Me</h4>
+    <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-8008-9014" href="https://orcid.org/0000-0001-8008-9014" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0001-8008-9014</a></div>
+
     <h4 style="font-weight: normal; color: #159957; font-size:120%;">All Posts</h4>
         {% for tag in site.tags %}
             {{ tag[0] }} [{{tag[1] | size}}]
