--- a/css/Version6.css
+++ b/css/Version6.css
@@ -144,7 +144,7 @@ body_content > main-content{
 }
 
 content {
-  background-color: #e9e9e9;
+  background-color: none;
   width: fit-content;
   height: 100%;
   display: flex;
@@ -161,6 +161,8 @@ block_box{
 side_block{
   box-shadow: inset 3px 4px 3px #666666;
   border-radius: 5px;
+  display: flex;
+  flex: 0 0 25em;
 }
 
 a { color: #1e6bb8; text-decoration: none; }
