--- a/css/Version6.css
+++ b/css/Version6.css
@@ -163,6 +163,7 @@ side_block{
   border-radius: 5px;
   display: flex;
   flex: 0 0 25em;
+  padding: 10px;
 }
 
 a { color: #1e6bb8; text-decoration: none; }
