--- a/Asset/css/Download_Page.css
+++ b/Asset/css/Download_Page.css
@@ -1,20 +1,33 @@
-.download_card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 10px;
-    width: 350px;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-.download_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  /* Add some padding inside the card container */
-.download_container {
-    padding: 2px 16px;
-  }
+.download_flex_box{
+  display: flex;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-between;	
+  align-items: stretch;
+  align-content: flex-start;
+  margin-bottom: -50px;
+}
+.download_card{
+  border: thin black;
+  -webkit-box-shadow: 3px 5px 6px black;
+  box-shadow: 3px 5px 6px black;
+  padding: 10px;
+  flex-grow: 0;
+  flex-basis: 150px;
+  margin: auto;
+  transition: 0.3s;
+  margin-bottom: 50px;
+  border-radius: 10px;
+}
+.download_card:hover{
+  transition: 0.3s;
+  box-shadow: 1px 3px 3px #666666;
+}
 img{
-    border-radius: 10px 10px 0 0;
+  border-radius: 10px;
+  width:100%;
 }
