--- a/css/Version9.css
+++ b/css/Version9.css
@@ -170,6 +170,8 @@ side_block{
 a { color: #1e6bb8; text-decoration: none; }
 a:hover { text-decoration: none; }
 
+@media screen and (max-width: 1200px){content{display: none;}}
+
 .btn { display: inline-block; margin-bottom: 1rem; color: rgba(88, 88, 88, 0.7); background-color: rgba(255, 255, 255, 0.08); border-color: rgba(150, 150, 150, 0.2); border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; transition: 0.3s}
 .btn:hover { color: rgba(88, 88, 88, 0.8); text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.3); box-shadow: inset 3px 2px  #bbbbbb; transition:0.3s;}
 .btn + .btn { margin-left: 1rem; }
